--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,7 @@ body {
 	padding-left:		1px;
 	padding-right:		1px;
 	z-index:			0;
+	all: revert;
 }
 
 div.hidden {
@@ -43,6 +44,25 @@ nav {
 
 .progress-bar-animated {
 	width: 100%;
+}
+
+
+.map-overlay {
+    font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    position: absolute;
+    width: 200px;
+    top: 100px;
+    left: 50%;
+	padding: 10px;
+	margin-left: -100px;
+}
+
+.map-overlay .map-overlay-inner {
+    background-color: #fff;
+    box-shadow:0 1px 2px rgba(0, 0, 0, 0.10);
+    border-radius: 3px;
+    padding: 10px;
+    margin-bottom: 10px;
 }
 
 /* Can't get shadow to work without disabling click events on Mapbox GL */
