--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,22 @@ nav {
     margin-bottom: 10px;
 }
 
+.legend-square {
+    display: inline-block;
+    border-radius: 20%;
+    width: 10px;
+    height: 10px;
+    margin-right: 5px;
+}
+
+.legend-line {
+    display: inline-block;
+    border-radius: 20%;
+    width: 10px;
+    height: 5px;
+    margin-right: 5px;
+}
+
 /* Can't get shadow to work without disabling click events on Mapbox GL */
 /*
 .shad:before {
