--- a/src/style.css
+++ b/src/style.css
@@ -1,37 +1,35 @@
 body, html {
-	height:				100%;
+    height: 100%;
+    background-color: #5cdb95;
+    font-family: 'Chivo', sans-serif;
 }
 
 body {
-	margin:				0;
-	padding:			0;
-	display:			flex;
-    flex-direction:		column;
+	display: flex;
+    flex-direction: column;
 }
 
 #map {
-	position:			relative;
-	right:				0;
-	padding-left:		1px;
-	padding-right:		1px;
-	z-index:			0;
-	all: revert;
+	position: relative;
+	padding-left: 1px;
+	padding-right: 1px;
 }
 
 div.hidden {
-	display:			none;
+	display: none;
 }
 
 nav {
-	background-color: 	#5f9ea0;
+	background-color: #015249;
 }
 
 .jumbotron {
-	background-color: #a0d6b4;
+    background-color: transparent;
+    width: 50%;
 }
 
 .pane {
-	background-color: #fdf9f9;
+	background-color: #feffff;
 }
 
 .slider-selection {
@@ -45,7 +43,6 @@ nav {
 .progress-bar-animated {
 	width: 100%;
 }
-
 
 .map-overlay {
     font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
@@ -80,17 +77,3 @@ nav {
     height: 5px;
     margin-right: 5px;
 }
-
-/* Can't get shadow to work without disabling click events on Mapbox GL */
-/*
-.shad:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 1;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-*/
