--- a/src/style.css
+++ b/src/style.css
@@ -101,9 +101,8 @@ nav {
     position: absolute;
     z-index: 1;
 
-    bottom: 100%;
-    left: 50%;
-    margin-left: -90px; /* Use half of the width (120/2 = 60), to center the tooltip */
+    top: -5px;
+    left: 105%; 
 }
 
 /* Show the tooltip text when you mouse over the tooltip container */
