Update about text and style, replace jumbotron with better css

--- a/src/style.css
+++ b/src/style.css
@@ -32,9 +32,9 @@ nav {
     padding-top: 10px;
 }
 
-.jumbotron {
-    background-color: transparent;
-    width: 50%;
+.text-width {
+    word-wrap: break-word;
+    width: 60%;
 }
 
 .pane {
